--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         </div>
         <!-- /.container -->
     </nav>
-    <header style="background-image: url('assets/img/creative/bg-header.jpg');">
+    <header style="background-image: url('assets/img/creative/portfolio/bg-3.jpg');">
         <div class="intro-content">
-            <img src="assets/img/creative/profile.png" class="img-responsive img-centered" alt="">
+            <!-- <img src="assets/img/creative/profile.png" class="img-responsive img-centered" alt=""> -->
             <div class="brand-name">Scott Harvey</div>
             <hr class="colored">
             <div class="brand-name-subtext">Web Developer</div>
@@ -108,7 +108,7 @@
         <div class="container wow fadeIn">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="assets/img/creative/about.jpg" class="img-responsive" alt="">
+                    <img src="assets/img/creative/portPicMe.jpg" class="img-responsive" alt="">
                 </div>
                 <div class="col-md-6 text-center">
                     <h1>Hi, I'm Scott Harvey</h1>
@@ -145,15 +145,15 @@
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
                     <div class="about-content">
-                        <i class="fa fa-camera-retro fa-4x"></i>
-                        <h3>Photography</h3>
+                        <i class="fa fa-music fa-4x"></i>
+                        <h3>Music</h3>
                         <p>When building this theme, we've paid close attention to how it looks on various screen sizes. Try it out on a phone or tablet!</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".8s">
                     <div class="about-content">
-                        <i class="fa fa-paint-brush fa-4x"></i>
-                        <h3>Graphic Design</h3>
+                        <i class="fa fa-heart fa-4x"></i>
+                        <h3>Excercise</h3>
                         <p>All of our themes are crafted with care, and we strive to make your experience as one of our customers the best as possible.</p>
                     </div>
                 </div>
@@ -243,20 +243,20 @@
         </div>
     </section>
     <section class="portfolio-carousel wow fadeIn">
-        <div class="item" style="background-image: url('assets/img/creative/portfolio/bg-1.jpg')">
+        <div class="item" style="background-image: url('assets/img/myImages/newTrack.jpg')">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-4 col-md-push-8">
                         <div class="project-details">
-                            <img src="assets/img/client-logos/logo-1.png" class="img-responsive client-logo" alt="">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
+                            <img src="assets/img/myImages/logo-1.png" class="img-responsive client-logo" alt="">
+                            <span class="project-name">Track Our Truck</span>
+                            <span class="project-description">Vehicle Tracking, Website Design</span>
                             <hr class="colored">
                             <a href="#portfolioModal1" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive portfolio-image" alt="">
+                        <!-- <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive portfolio-image" alt=""> -->
                     </div>
                 </div>
             </div>
@@ -329,10 +329,10 @@
                                 <span class="filter active" data-filter="identity graphic logo web">All</span>
                             </li>
                             <li>
-                                <span class="filter" data-filter="identity">Identity</span>
+                                <span class="filter" data-filter="identity">Angular</span>
                             </li>
                             <li>
-                                <span class="filter" data-filter="graphic">Graphic</span>
+                                <span class="filter" data-filter="graphic">React</span>
                             </li>
                             <li>
                                 <span class="filter" data-filter="web">Web</span>
@@ -346,11 +346,11 @@
                     <div id="portfoliolist">
                         <div class="portfolio identity" data-cat="identity" href="#portfolioModal1" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/identity/1.jpg" alt="">
+                              <img src="assets/img/myImages/teslaClone.png" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
-                                        <a class="text-title">Generic Inc.</a>
-                                        <span class="text-category">Brand Identity</span>
+                                        <a class="text-title">Tesla Clone</a>
+                                        <span class="text-category">Angular</span>
                                     </div>
                                     <div class="caption-bg"></div>
                                 </div>
@@ -358,10 +358,10 @@
                         </div>
                         <div class="portfolio web" data-cat="web" href="#portfolioModal2" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/web/1.jpg" alt="">
+                              <img src="assets/img/myImages/newTrack.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
-                                        <a class="text-title">Brands</a>
+                                        <a class="text-title">Track Our Truck</a>
                                         <span class="text-category">Web Development</span>
                                     </div>
                                     <div class="caption-bg"></div>
@@ -370,10 +370,10 @@
                         </div>
                         <div class="portfolio graphic" data-cat="graphic" href="#portfolioModal3" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/graphic/1.jpg" alt="">
+                              <img src="assets/img/myImages/concertPic.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
-                                        <a class="text-title">Excellence</a>
+                                        <a class="text-title">Itunes Clone</a>
                                         <span class="text-category">Poster Design</span>
                                     </div>
                                     <div class="caption-bg"></div>
@@ -382,10 +382,10 @@
                         </div>
                         <div class="portfolio web" data-cat="web" href="#portfolioModal4" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/web/2.jpg" alt="">
+                              <img src="assets/img/myImages/sikImg1-min.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
-                                        <a class="text-title">YouTV</a>
+                                        <a class="text-title">Sik Photo Generator</a>
                                         <span class="text-category">Web Development</span>
                                     </div>
                                     <div class="caption-bg"></div>
